--- a/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
+++ b/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
@@ -57,9 +57,14 @@
     <Compile Include="Migrations\201611150305341_InitialDB.Designer.cs">
       <DependentUpon>201611150305341_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611151704429_AddErrorTable.cs" />
+    <Compile Include="Migrations\201611151704429_AddErrorTable.Designer.cs">
+      <DependentUpon>201611151704429_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaoDatShopDbContext.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -97,6 +102,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201611150305341_InitialDB.resx">
       <DependentUpon>201611150305341_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611151704429_AddErrorTable.resx">
+      <DependentUpon>201611151704429_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
