--- a/BaoDatShop/BaoDatShop.Model/BaoDatShop.Model.csproj
+++ b/BaoDatShop/BaoDatShop.Model/BaoDatShop.Model.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Adstract\Auditable.cs" />
     <Compile Include="Adstract\IAuditable.cs" />
+    <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Footer.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuGroup.cs" />
