--- a/BaoDatShop/BaoDatShop.Web/BaoDatShop.Web.csproj
+++ b/BaoDatShop/BaoDatShop.Web/BaoDatShop.Web.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
+    <Compile Include="Models\FooterViewModel.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
     <Compile Include="Models\PostTagViewModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
@@ -4396,7 +4397,9 @@
     <Content Include="Assets\admin\libs\angular-local-storage\README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AppSettings.config" />
+    <Content Include="AppSettings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="ConnectionStrings.config" />
   </ItemGroup>
   <ItemGroup>
