--- a/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
+++ b/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Migrations\201611230802053_AddTagField.Designer.cs">
       <DependentUpon>201611230802053_AddTagField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611281551168_AddContentToSlide.cs" />
+    <Compile Include="Migrations\201611281551168_AddContentToSlide.Designer.cs">
+      <DependentUpon>201611281551168_AddContentToSlide.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaoDatShopDbContext.cs" />
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611230802053_AddTagField.resx">
       <DependentUpon>201611230802053_AddTagField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611281551168_AddContentToSlide.resx">
+      <DependentUpon>201611281551168_AddContentToSlide.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
