--- a/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
+++ b/BaoDatShop/BaoDatShop.Data/BaoDatShop.Data.csproj
@@ -93,9 +93,14 @@
     <Compile Include="Migrations\201611302148205_addforeignkey.Designer.cs">
       <DependentUpon>201611302148205_addforeignkey.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612031926074_ContactDetail.cs" />
+    <Compile Include="Migrations\201612031926074_ContactDetail.Designer.cs">
+      <DependentUpon>201612031926074_ContactDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaoDatShopDbContext.cs" />
+    <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
@@ -155,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611302148205_addforeignkey.resx">
       <DependentUpon>201611302148205_addforeignkey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612031926074_ContactDetail.resx">
+      <DependentUpon>201612031926074_ContactDetail.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
