--- a/BaoDatShop/BaoDatShop.Model/BaoDatShop.Model.csproj
+++ b/BaoDatShop/BaoDatShop.Model/BaoDatShop.Model.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Adstract\Auditable.cs" />
     <Compile Include="Adstract\IAuditable.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\ContactDetail.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Footer.cs" />
     <Compile Include="Models\Menu.cs" />
