--- a/BaoDatShop/BaoDatShop.Web/bower.json
+++ b/BaoDatShop/BaoDatShop.Web/bower.json
@@ -12,6 +12,8 @@
     "ngBootbox": "~0.1.3",
     "slimScroll": "~1.3.7",
     "toastr": "~2.1.2",
-    "ng-ckeditor": "~0.2.1"
+    "ng-ckeditor": "~0.2.1",
+    "angular-local-storage": "~0.2.7",
+    "angular-loading-bar": "~0.9.0"
   }
 }
