--- a/Web.config
+++ b/Web.config
@@ -41,12 +41,12 @@
       </system.Web>
   -->
   <system.web>
-    <compilation targetFramework="4.5.1" />
+    <compilation targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
     </httpHandlers>
-    <sessionState mode="InProc" cookieless="false" timeout="20" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" />
+    <sessionState mode="InProc" cookieless="AutoDetect" timeout="20" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" />
     <pages enableSessionState="true">
       <controls>
         <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
@@ -58,7 +58,6 @@
       <remove name="WebDAVModule" />
     </modules>
     <handlers>
-      <add name="JavaScriptHandler" path="*.js" verb="*" preCondition="integratedMode" type="System.Web.StaticFileHandler" />
       <remove name="WebDAV" />
       <remove name="BotDetectCaptchaHandler" />
       <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
