Update V2.3.5: Online payment gateway (Source)

--- a/BaoDatShop/BaoDatShop.Web/BaoDatShop.Web.csproj
+++ b/BaoDatShop/BaoDatShop.Web/BaoDatShop.Web.csproj
@@ -5122,6 +5122,7 @@
     <Content Include="Assets\admin\libs\Chart.js\.bower.json" />
     <Content Include="Assets\admin\libs\Chart.js\bower.json" />
     <None Include="Properties\PublishProfiles\publish-web.pubxml" />
+    <None Include="Properties\PublishProfiles\publish-WS.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
